--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
@@ -93,6 +95,43 @@
     </li>
 </ul>
 </section>
+  <!-- Section 4 -->
+
+  <section>
+    <h2>Our Portfolio</h2>
+<ul>
+    <li>
+        <img src="./images/portfolio/poltfolio-1.jpg" alt="poltfolio 1" width="360">
+            <h3>Banking App</h3>
+                <p>App</p>
+    </li>
+    <li>
+        <img src="./images/portfolio/portfolio-2.jpg" alt="portfolio 2" width="360">
+            <h3>Cashless Payment</h3>
+                <p>Marketing</p>
+    </li>
+    <li>
+        <img src="./images/portfolio/portfolio-3.jpg" alt="portfolio 3" width="360">
+            <h3>Meditation App</h3>
+                <p>App</p>
+    </li>
+    <li>
+        <img src="./images/portfolio/portfolio-4.jpg" alt="portfolio 4" width="360">
+            <h3>Taxi Service</h3>
+                <p>Marketing</p>
+    </li>
+    <li>
+        <img src="./images/portfolio/portfolio-5.jpg" alt="portfolio 5" width="360">
+            <h3>Screen Illustrations</h3>
+                <p>Design</p>
+    </li>
+    <li>
+        <img src="./images/portfolio/portfolio-6.jpg" alt="portfolio 6" width="360">
+            <h3>Online Courses</h3>
+                <p>Marketing</p>
+    </li>
+</ul>
+  </section>
     </main>
 
     <footer>
