corrected html and file css

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         <a class="nav-link" href="./index.html">Studio</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Portfolio</a>
+        <a class="nav-link" href="">Portfolio</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Contacts</a>
+        <a class="nav-link" href="">Contacts</a>
     </li>
 </ul>
  </nav>
      <!-- Contact info -->
-<address class="Contacts">
+<address class="сontacts">
 <ul class="contacts-list">
     <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 <li class="contacts-item"><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -136,8 +136,8 @@
     </li>
     <li>
         <img src="./images/portfolio/portfolio-6.jpg" alt="portfolio 6" width="360">
-            <h3>Online Courses</h3>
-                <p>Marketing</p>
+            <h3 class="portfolio-subtitle">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
     </li>
 </ul>
   </section>
