--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
     <h2 class="portfolio-title">Our Portfolio</h2>
 <ul class="portfolio-list">
     <li class="portfolio-item">
-        <img src="./images/portfolio/poltfolio-1.jpg" alt="poltfolio 1" width="360">
-            <h3>Banking App</h3>
-                <p>App</p>
+        <img src="./images/portfolio/poltfolio-1.jpg" alt="poltfolio 1" width="360" class="portfolio-icon">
+            <h3 class="portfolio-subtitle">Banking App</h3>
+                <p class="portfolio-text">App</p>
     </li>
     <li class="portfolio-item">
         <img src="./images/portfolio/portfolio-2.jpg" alt="portfolio 2" width="360" class="portfolio-icon">
@@ -129,13 +129,13 @@
             <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
     </li>
-    <li>
+    <li class="portfolio-item">
         <img src="./images/portfolio/portfolio-5.jpg" alt="portfolio 5" width="360" class="portfolio-icon">
             <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
     </li>
-    <li>
-        <img src="./images/portfolio/portfolio-6.jpg" alt="portfolio 6" width="360">
+    <li class="portfolio-item">
+        <img src="./images/portfolio/portfolio-6.jpg" alt="portfolio 6" width="360" class="portfolio-icon">
             <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
     </li>
